src/recipe/parser/snapshots/rattler_build__recipe__parser__about__test__invalid_url.snap
---
source: src/recipe/parser/about.rs
expression: err
---
  × Failed to parse recipe

Error:   × Parsing: failed to parse URL: relative URL without a base
   ╭─[6:1]
 6 │         about:
 7 │             homepage: license_urla.asda:://sdskd
   ·                       ─────────────┬────────────
   ·                                    ╰── here
 8 │         
   ╰────

